--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="js/index.js"></script>
+
     <title>Document</title>
 </head>
 
 <body>
+    <ul id="tabel">
 
+    </ul>
 </body>
+
+
+<script>
+
+    var ulContent = "";
+    for (i = 0; i <= 2; i++) {
+        var makan = ["nasi", "bakso", "soto"];
+        ulContent += "<li>" + makan[i] + "</li >";
+    }
+    document.getElementById('tabel').innerHTML = ulContent;
+</script>
 
 </html>
