--- a/index.html
+++ b/index.html
@@ -5,26 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="js/index.js"></script>
+
 
     <title>Document</title>
 </head>
 
 <body>
-    <ul id="tabel">
+    <p>Planet</p>
+    <ul id="planet">
 
     </ul>
 </body>
 
+<script src="js/index2.js"></script>
+<script src="js/index.js"></script>
 
-<script>
 
-    var ulContent = "";
-    for (i = 0; i <= 2; i++) {
-        var makan = ["nasi", "bakso", "soto"];
-        ulContent += "<li>" + makan[i] + "</li >";
-    }
-    document.getElementById('tabel').innerHTML = ulContent;
-</script>
 
 </html>
