--- a/index.html
+++ b/index.html
@@ -4,20 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" cosntent="ie=edge">
 
 
     <title>Document</title>
 </head>
 
 <body>
-    <p>Planet</p>
-    <ul id="planet">
+    <table border="1">
+        <tbody>
+            <tr>
+                <th>Name</th>
+                <th>Rotation Period</th>
+                <th>Orbital Period</th>
+                <th>Diameter</th>
+                <th>Climate</th>
+                <th>Gravity</th>
+                <th>Terrain</th>
+                <th>Surface Water</th>
+                <th>Population</th>
+            </tr>
+        </tbody>
+        <tbody id="dataTabel">
 
-    </ul>
+        </tbody>
+
+    </table>
+
 </body>
 
-<script src="js/index2.js"></script>
+<button id="sortName">
+    sort
+</button>
+
+<script src="js/data.js"></script>
 <script src="js/index.js"></script>
 
 
