--- a/index.html
+++ b/index.html
@@ -11,31 +11,28 @@
 </head>
 
 <body>
-    <table border="1">
-        <tbody>
-            <tr>
-                <th>Name</th>
-                <th>Rotation Period</th>
-                <th>Orbital Period</th>
-                <th>Diameter</th>
-                <th>Climate</th>
-                <th>Gravity</th>
-                <th>Terrain</th>
-                <th>Surface Water</th>
-                <th>Population</th>
-            </tr>
-        </tbody>
-        <tbody id="dataTabel">
 
-        </tbody>
-
-    </table>
+    <div>
+        <table border="1">
+            <tbody>
+                <tr>
+                    <th id="sortName">Name</th>
+                    <th>Rotation Period</th>
+                    <th>Orbital Period</th>
+                    <th>Diameter</th>
+                    <th>Climate</th>
+                    <th>Gravity</th>
+                    <th>Terrain</th>
+                    <th>Surface Water</th>
+                    <th>Population</th>
+                </tr>
+            </tbody>
+            <tbody id="dataTabel"></tbody>
+        </table>
+    </div>
 
 </body>
 
-<button id="sortName">
-    sort
-</button>
 
 <script src="js/data.js"></script>
 <script src="js/index.js"></script>
