--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <table border="1">
             <tbody>
                 <tr>
-                    <th id="sortName">Name</th>
-                    <th>Rotation Period</th>
+                    <th id="sortName" onclick="sortName();">Name</th>
+                    <th id="sortRotation" onclick="sortRotation()">Rotation Period</th>
                     <th>Orbital Period</th>
                     <th>Diameter</th>
-                    <th>Climate</th>
+                    <th id="sortClimate" onclick="sortClimate();">Climate</th>
                     <th>Gravity</th>
                     <th>Terrain</th>
                     <th>Surface Water</th>
