--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" cosntent="ie=edge">
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Table Dipadana</title>
 </head>
 
 <body>
 
+    <div class="container mt-4">
+        <p><span class="title">STARS WARS PLANET TABLE</span> based on <a href="https://swapi.co/api/planets/">swapi</a>
+        </p>
+    </div>
     <div class="container table-responsive">
-        <table class="table table-bordered table-hover table-sm">
+        <table class="table table-stripted table-bordered table-light table-hover table-sm">
             <thead class="thead-dark">
                 <tr>
                     <th id="sortName" onclick="sortName();">Name</th>
@@ -22,13 +26,16 @@
                     <th id="sortDiameter" onclick="sortDiameter()">Diameter</th>
                     <th id="sortClimate" onclick="sortClimate();">Climate</th>
                     <th id="sortGravity" onclick="sortGravity()">Gravity</th>
-                    <th>Terrain</th>
+                    <th class="terrain">Terrain</th>
                     <th id="sortSurface" onclick="sortSurface()">Surface Water</th>
                     <th id="sortPopulation" onclick="sortPopulation()">Population</th>
                 </tr>
             </thead>
             <tbody id="dataTabel"></tbody>
         </table>
+    </div>
+    <div>
+        <p class="container footer">*click the header table to sort according to the category</p>
     </div>
 
 </body>
