--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 </head>
 
 <body>
-
     <div class="container mt-4">
-        <p><span class="title">STARS WARS PLANET TABLE</span> based on <a href="https://swapi.co/api/planets/">swapi</a>
+        <p><span class="title">STARS WARS PLANET TABLE</span>
         </p>
     </div>
     <div class="container table-responsive">
@@ -35,9 +34,9 @@
         </table>
     </div>
     <div>
-        <p class="container footer">*click the header table to sort according to the category</p>
+        <p class="container footer">*click the header table to sort according to the category, based on <a
+                href="https://swapi.co/api/planets/">swapi</a></p>
     </div>
-
 </body>
 
 <script src="js/data.js"></script>
